--- a/sobre.html
+++ b/sobre.html
@@ -7,20 +7,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" xintegrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="https://placehold.co/32x32/56A3A6/FFFFFF?text=DT" type="image/png">
+    <link rel="icon" href="img/logo.png" type="image/png">
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-custom sticky-top">
     <div class="container">
-        <a class="navbar-brand" href="index.html">Dia do Turista</a>
+        <a class="navbar-brand" href="index.html">
+            <img src="img/logo.png" alt="">
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Início</a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="sobre.html">Sobre o Dia</a>
@@ -50,7 +52,7 @@
                 <p>No Brasil, além da data mundial, podem existir datas comemorativas estaduais ou municipais dedicadas ao turista. O propósito é sempre o mesmo: valorizar o ato de viajar, a troca cultural e o impacto positivo que o turismo pode gerar.</p>
             </div>
             <div class="col-md-5 text-center">
-                <img src="https://placehold.co/450x300/87CEEB/333333?text=OMT+e+Turismo+Global" alt="Globo terrestre estilizado com ícones de viagem" class="img-fluid rounded shadow">
+                <img src="https://www.cndportugues.com/sites/default/files/2020-06/OMT2.jpg" alt="Globo terrestre estilizado com ícones de viagem" class="img-fluid rounded shadow">
             </div>
         </div>
 
@@ -60,7 +62,7 @@
             <p>Desde então, a cada ano, a OMT seleciona um país anfitrião e um tema específico para as celebrações oficiais, buscando destacar diferentes facetas e desafios do setor turístico.</p>
         </div>
             <div class="col-md-5 text-center">
-                <img src="https://placehold.co/450x300/A7C957/FFFFFF?text=Marcos+Históricos" alt="Imagem antiga representando marcos históricos do turismo" class="img-fluid rounded shadow">
+                <img src="https://a.travel-assets.com/findyours-php/viewfinder/images/res40/205000/205557-Malaga-Costa-Del-Sol.jpg" alt="Imagem antiga representando marcos históricos do turismo" class="img-fluid rounded shadow">
             </div>
         </div>
 
@@ -94,14 +96,44 @@
 
 <footer class="footer-custom">
     <div class="container">
-        <div class="social-icons mb-3">
-            <a href="#" title="Facebook"><i class="bi bi-facebook"></i></a>
-            <a href="#" title="Instagram"><i class="bi bi-instagram"></i></a>
-            <a href="#" title="Twitter"><i class="bi bi-twitter-x"></i></a>
+        <div class="row">
+            <div class="col-md-4 mb-4 mb-md-0 text-center text-md-start">
+                <h5>Contato</h5>
+                <div class="contact-info">
+                    <p><i class="bi bi-envelope-fill"></i> <a href="mailto:fellipe.martins@a.ucb.br">fellipe.martins@a.ucb.br</a></p>
+                    <p><i class="bi bi-telephone-fill"></i> <a>+55 (61) 98375-8689</a></p>
+                    <p><i class="bi bi-geo-alt-fill"></i> <a href="https://ucb.catolica.edu.br">Universidade Católica de Brasília</a></p>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-4 mb-md-0 text-center">
+                <h5>Explore Mais</h5>
+                <ul class="list-unstyled">
+                    <li><a class="nav-link" href="index.html">Início</a></li>
+                    <li><a class="nav-link" href="sobre.html">Sobre o Dia</a></li>
+                    <li><a class="nav-link" href="celebrar.html">Ideias para Celebrar</a></li>
+                    <li><a class="nav-link" href="blog.html">Blog & Inspirações</a></li>
+                    <li><a class="nav-link" href="galeria.html">Galeria</a></li>
+                </ul>
+            </div>
+
+            <div class="col-md-4 text-center text-md-end">
+                <h5>Siga-nos</h5>
+                <div class="social-icons">
+                    <a href="https://www.instagram.com/felp.dev/" target="_blank" title="Siga-nos no Instagram"><i class="bi bi-instagram"></i></a>
+                </div>
+                <div class="policy-links mt-4">
+                    <p><span class="policy-link">Política de Privacidade</span></p>
+                    <p><span class="policy-link">Termos de Uso</span></p>
+                </div>
+            </div>
         </div>
-        <p>&copy; <span id="currentYear"></span> Dia do Turista. Todos os direitos reservados.</p>
-        <p>Desenvolvido com <i class="bi bi-heart-fill" style="color: #FF8C42;"></i> para celebrar o turismo.</p>
-        <p><a href="#">Política de Privacidade</a> | <a href="#">Termos de Uso</a></p>
+        <div class="row">
+            <div class="col-12 text-center copyright-text">
+                <p>&copy; <span id="currentYear"></span> Dia do Turista. Todos os direitos reservados.</p>
+                <p>Desenvolvido com <i class="bi bi-heart-fill" style="color: #FF8C42;"></i> para celebrar o turismo.</p>
+            </div>
+        </div>
     </div>
 </footer>
 
